# -OML-omni-media-linker

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: common.h
include/core/: dispatcher.h  mapper.h
include/os/: actions.h  scanner.h
include/util/: config_loader.h
src/: common.cpp  main.cpp
src/core/: dispatcher.cpp  mapper.cpp
src/os/: actions.cpp  scanner.cpp
src/util/: config_loader.cpp
